--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/Reservation
+spring.datasource.username=postgres
+spring.datasource.password=qwerty
 
+
+spring.jpa.show-sql=true
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
