--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
