--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+
+
+security.jwt.secretKey=verysecretkeyneverguessit
+
