--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
     </dependencies>
 
     <build>
+        <finalName>room_reservation_docker_app</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
