--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Reservation
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-
+spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 
 
