--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 
 security.jwt.secretKey=verysecretkeyneverguessit
 
+spring.cache.jcache.config=classpath:ehcache.xml
+
